<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    >

    <EditText
        android:id="@+id/signup_id"
        android:maxLength="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_identification_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signup_pw"
        android:maxLength="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_password_text"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:hint="@string/signup_photo_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signup_name"
        android:maxLength="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_name_text"
        android:inputType="textPersonName" />

    <!--<EditText
        android:id="@+id/signup_phone_number"
        android:maxLength="15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_phone_number_text"
        android:inputType="textPersonName" />-->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/signup_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="학생" />

        <RadioButton
            android:id="@+id/signup_radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="교수" />

    </RadioGroup>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/signup_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signUp_button_text"
        />

    <Button
        android:id="@+id/signup_page_cancle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/signUp_cancle_button_text" />
</LinearLayout>
</LinearLayout>
