<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inhatc.capstone.capstone_login"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/identification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/login_id_text"
        />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_pw_text"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_below="@+id/identification"
        android:layout_alignLeft="@+id/identification"
        android:layout_alignStart="@+id/identification" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_below="@+id/passWord"
        android:layout_alignLeft="@+id/passWord"
        android:layout_alignStart="@+id/passWord" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passWord"
        android:layout_alignRight="@+id/passWord"
        android:layout_below="@+id/passWord"
        android:text="@string/signUp_button_text" />

</RelativeLayout>
